# mqtt-for-ai

./: .gitignore  README.md  amplify.yml  get-started.md  index.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: deploy.yml  sdk-python-publish.yml  sdk-python.yml
.vitepress/config/: index.mts  repos.mts  sidebar.mts
.vitepress/theme/: custom.css  index.mts
.vitepress/theme/components/: Community.vue  Features.vue  Hero.vue  NavBarTitle.vue  NotFound.vue  PoweredBy.vue
.vitepress/theme/components/get-started/: Hero.vue  SpecCard.vue  SpecsSection.vue
a2a-over-mqtt/: README.md  index.md  use-cases.md
a2a-over-mqtt/sdk/python/: README.md  index.md  pyproject.toml
a2a-over-mqtt/sdk/python/a2a_over_mqtt/: __init__.py  discovery.py  mqtt.py  protocol.py  requester.py  responder.py  topics.py
a2a-over-mqtt/sdk/python/tests/: test_discovery.py  test_protocol.py  test_requester.py  test_responder.py  test_topics.py
a2a-over-mqtt/specification/: index.md
a2a-over-mqtt/specification/0.1/basic/: architecture.md  mqtt_transport.md
a2a-over-mqtt/user-stories/: 01-security-oauth.md  02-request-single-response.md  03-request-multi-response.md  04-request-multi-binary-artifact-responses.md  05-shared-pool-dispatch.md  06-untrusted-broker-security-profile.md  07-task-handover.md  08-multi-turn-conversation.md  09-presence-lifecycle.md
design/: get-started.html  index.html
mcp-over-mqtt/: sidebar.json
mqtt-quic/: index.md
scripts/: fetch-docs.mts
