[project]
name = "a2a-over-mqtt"
version = "0.1.0"
description = "Python SDK for the A2A-over-MQTT protocol"
requires-python = ">=3.11"
dependencies = [
    "aiomqtt>=2.5.0",
    "paho-mqtt>=2.0.0",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.25"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
